2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* simple-editor/Makefile.am:
	* simple-editor/gmenu-simple-editor.in: use the PYTHON found by
	configure instead of "env python"
	Fix bug #343978

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* layout/settings.menu: use <Layout> to put Preferences before
	Administration

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* desktop-directories/System-Settings.directory.in:
	s/systemwide/system-wide/
	Fix bug #326707

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* simple-editor/GMenuSimpleEditor/main.py: import pygtk and require
	version 2.0
	Fix bug #382111

2007-05-01  Vincent Untz  <vuntz@gnome.org>

	* simple-editor/GMenuSimpleEditor/maindialog.py: (__setup_menus_tree):
	use SELECTION_BROWSE instead of SELECTION_SINGLE so the user can't
	unselect a menu
	(__menus_selection_changed): if there's no selection (happens if the
	user searches the treeview), just set the entries list to show no
	model
	Fix bug #417273

2007-03-12  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.18.1

==================== 2.18.0 ====================

2007-03-12  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.18.0.

2007-02-26  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.18.0

==================== 2.17.92 ====================

2007-02-26  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: Version 2.17.92.

2007-02-21 Maxim Dziumanenko <dziumanenko@gmail.com>

	* uk.po: Update Ukrainian translation.

2007-02-20  Denis Washington  <denisw@svn.gnome.org>

	* desktop-directories/Preferences.directory:
	* desktop-directories/System-Settings.directory:
	Reverting the default use of the shell and use the menus for 2.18
	instead. The shell still needs some love and probably will be default
	for GNOME 2.20.
	
2007-02-13  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.17.92

==================== 2.17.91 ====================
