@@ -1,6 +1,6 @@
 [Desktop Entry]
 _Name=Accessories
 _Comment=Desktop accessories
-Icon=gnome-util
+Icon=applications-accessories
 Type=Directory
 Encoding=UTF-8
