@@ -1,6 +1,6 @@
 [Desktop Entry]
 _Name=Programming
 _Comment=Tools for software development
-Icon=gnome-devel
+Icon=applications-development
 Type=Directory
 Encoding=UTF-8
