@@ -1,5 +1,5 @@
 [Desktop Entry]
 _Name=Education
-Icon=package_edutainment
+Icon=applications-science
 Type=Directory
 Encoding=UTF-8
