@@ -1,6 +1,6 @@
 [Desktop Entry]
 _Name=Games
 _Comment=Games and amusements
-Icon=gnome-joystick
+Icon=applications-games
 Type=Directory
 Encoding=UTF-8
