@@ -1,6 +1,6 @@
 [Desktop Entry]
 _Name=Graphics
 _Comment=Graphics applications
-Icon=gnome-graphics
+Icon=applications-graphics
 Type=Directory
 Encoding=UTF-8
