@@ -1,6 +1,6 @@
 [Desktop Entry]
 _Name=Internet
 _Comment=Programs for Internet access such as web and email
-Icon=gnome-globe
+Icon=applications-internet
 Type=Directory
 Encoding=UTF-8
