@@ -1,6 +1,6 @@
 [Desktop Entry]
 _Name=Internet and Network
 _Comment=Network-related settings
-Icon=gnome-globe
+Icon=preferences-system-network
 Type=Directory
 Encoding=UTF-8
