@@ -1,6 +1,6 @@
 [Desktop Entry]
 _Name=Sound & Video
 _Comment=Multimedia menu
-Icon=gnome-multimedia
+Icon=applications-multimedia
 Type=Directory
 Encoding=UTF-8
