@@ -1,6 +1,6 @@
 [Desktop Entry]
 _Name=Office
 _Comment=Office Applications
-Icon=gnome-applications
+Icon=applications-office
 Type=Directory
 Encoding=UTF-8
