@@ -1,6 +1,6 @@
 [Desktop Entry]
 _Name=Other
 _Comment=Applications that did not fit in other categories
-Icon=gnome-other
+Icon=applications-other
 Type=Directory
 Encoding=UTF-8
