@@ -1,6 +1,6 @@
 [Desktop Entry]
 _Name=Personal
 _Comment=Personal settings
-Icon=user-info
+Icon=preferences-desktop-personal
 Type=Directory
 Encoding=UTF-8
