@@ -1,6 +1,6 @@
 [Desktop Entry]
 _Name=System Tools
 _Comment=System configuration and monitoring
-Icon=gnome-system
+Icon=applications-system
 Type=Directory
 Encoding=UTF-8
